--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7,11 +7,10 @@ body {
 
 note-list {
   overflow: auto;
-  margin-top: 4.5em;
+  margin-top: 4em;
 }
 
 core-toolbar {
-  height: 3em;
   background: #4CAF50;
   color: white;
   font-family: sans-serif;
